Fixed z-index problems
Main.tsx - Hero Overlay - 5
HeroText.tsx Main Div - 10
HeroText.tsx Navigation Buttons - 15
HeroText.tsx Navigation Dots - 15
HeroText.tsx Quote Button - 15
NextSeleectionScrollButton.tsx - 20
Navbar.tsx - NAVBAR_LOGO_AND_MENU_CONTAINER - 25
NavbarFixedBar.tsx - 30
ScrollNavigationButtons - 35 (Had to be applied individually to each ancor tag)
NavMobileMenu - 40

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ h3 {
     line-height: 20px !important;
   }
   /* Request a Quote Button */
-  .raq-button {
+  .req-button {
     margin-bottom: 80px !important;
   }
   .NAVBAR_FIXED_TOP_BAR {
